--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -15,7 +15,7 @@ permissions:
   checks: write
 
 jobs:
-  connserve:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
