--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -27,4 +27,4 @@ jobs:
         uses: golangci/golangci-lint-action@v9
         with:
           version: latest
-          args: -c .golangci.yaml --out-format=colored-line-number
+          args: -c .golangci.yaml
